supervisor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supervior-deploy
  namespace: faveo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supervisor-pods
  template:
    metadata:
      labels:
        app: supervisor-pods
    spec:
      containers:
      - name: faveo-supervisor
        image: tamilselvanlws/pia:supervisor-test-3
        resources:
           limits:
             cpu: '2'
             memory: 4096Mi
           requests:
             cpu: '1'
             memory: 2Gi
        volumeMounts:
        - name: volume-data
          mountPath: /var/www/html
        - name: cm
          mountPath: /var/www/html/.env
          subPath: .env
      volumes:
      - name: volume-data
        emptyDir: {}
      - name: cm
        configMap:
          name: faveo-env
